force-app/main/default/objects/Lead/fields/Enquiry_Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Ref_No__c</fullName>
    <label>Enquiry Ref No</label>
    <length>255</length>

    <type>Text</type>
</CustomField>