force-app/main/default/objects/Lead/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <label>Lead Status</label>
    <length>255</length>

    <type>Text</type>
</CustomField>