force-app/main/default/objects/Lead/fields/Pre_Sales_Rep_Source__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sales_Rep_Source__c</fullName>
    <label>Pre-Sales Rep Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>