force-app/main/default/objects/Lead/fields/Project_Interested__c.field-meta.xml
<CustomField>
    <fullName>Project_Interested__c</fullName>
    <label>Project Interested</label>
    <length>255</length>

    <type>Text</type>
</CustomField>