force-app/main/default/objects/Lead/fields/Propfocus_Link__c.field-meta.xml
<CustomField>
    <fullName>Propfocus_Link__c</fullName>
    <label>Propfocus Link</label>
    <type>Url</type>
</CustomField>