force-app/main/default/objects/Lead/fields/Propfocus_Post_Visit__c.field-meta.xml
<CustomField>
    <fullName>Propfocus_Post_Visit__c</fullName>
    <description>Latest generated Propfocus post-visit page URL.</description>
    <inlineHelpText>Stores the latest post-visit pricing page link generated from Propfocus.</inlineHelpText>
    <label>Propfocus Post Visit</label>
    <type>Url</type>
</CustomField>